--- a/api/package.json
+++ b/api/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.{js,ts}": [
-      "standard --fix",
-      "git add"
+    "src/**/*.{js,ts}": [
+      "standard --fix"
     ]
   },
   "keywords": [],
@@ -18,7 +17,9 @@
   "description": "",
   "devDependencies": {
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
-    "standard": "^17.1.2"
+    "standard": "^17.1.2",
+    "ts-jest": "^29.2.5"
   }
 }
