--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "standard": "^17.1.2",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2"
   }
 }
