--- a/api/package.json
+++ b/api/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watchAll",
+    "test:staged": "jest",
     "prepare": "husky"
   },
   "lint-staged": {
     "src/**/*.{js,ts}": [
-      "standard --fix"
+      "standard --fix",
+      "npm run test:staged"
     ]
   },
   "keywords": [],
