--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,8 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.ts": [
-      "standard --fix",
+    "**/*.{js,ts}": [
+      "eslint --fix",
       "npm run test:staged"
     ]
   },
@@ -19,10 +19,12 @@
   "description": "",
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "eslint": "^9.15.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
-    "standard": "^17.1.2",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   }
