--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,8 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "**/*.{js,ts}": [
-      "eslint --fix",
+    "*.ts": [
+      "eslint src/** --fix",
       "npm run test:staged"
     ]
   },
@@ -18,14 +18,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/create-config": "^1.4.0",
+    "@eslint/js": "^9.15.0",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^9.15.0",
+    "globals": "^15.12.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.15.0"
   }
 }
