change dir lint-staged

--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,8 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.ts": [
-      "eslint src/** --fix",
+    "src/**/*.ts": [
+      "eslint --fix",
       "npm run test:staged"
     ]
   },
