remove lint the package

--- a/api/package.json
+++ b/api/package.json
@@ -5,13 +5,8 @@
   "scripts": {
     "test": "jest --watchAll",
     "test:staged": "jest",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "src/**/*.ts": [
-      "eslint --fix",
-      "npm run test:staged"
-    ]
+    "prepare": "husky",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
