--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ES2019",
     "module": "commonjs",
     "experimentalDecorators": true,
     "resolveJsonModule": true,
@@ -25,5 +25,6 @@
   ],
   "exclude": [
     "node_modules",
+    "dist",
   ]
 }
