--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "@eslint/create-config": "^1.4.0",
     "@eslint/js": "^9.15.0",
     "@types/jest": "^29.5.14",
+    "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^9.15.0",
@@ -36,6 +37,9 @@
   },
   "dependencies": {
     "@types/validator": "^13.12.2",
+    "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7",
     "validator": "^13.12.0"
   }
 }
