--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@types/validator": "^13.12.2",
+    "axios": "^1.7.8",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
