--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@eslint/create-config": "^1.4.0",
     "@eslint/js": "^9.15.0",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
@@ -38,6 +39,7 @@
   "dependencies": {
     "@types/validator": "^13.12.2",
     "axios": "^1.7.8",
+    "express": "^4.21.1",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
