--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^9.15.0",
@@ -32,6 +33,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0"
