--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2",
@@ -45,6 +46,8 @@
     "axios": "^1.7.8",
     "express": "^4.21.1",
     "module-alias": "^2.2.3",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
