--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.8",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@react-google-maps/api": "^2.20.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
