--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,29 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
+  api:
+    build:
+      context: ./api
+    container_name: shopper_api
+    ports:
+      - "8080:8080"
+    environment:
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+    env_file:
+      - .env
+    depends_on:
+      - db
+
+  web:
+    build:
+      context: ./web
+    container_name: shopper_web
+    ports:
+      - "80:80"
+    env_file:
+      - .env
+    depends_on:
+      - api
+
 volumes:
   db_data:
