configure docker compose and docker file

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,6 +16,12 @@ WORKDIR /app
 
 COPY --from=build /app /app
 
+RUN apt-get update && apt-get install -y netcat-openbsd
+
+COPY start.sh /app/start.sh
+
+RUN chmod +x /app/start.sh
+
 EXPOSE 8080
 
-CMD ["npm", "start"]
+CMD ["./start.sh"]
