--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       - "8080:8080"
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - DB_USER=tiger
+      - DB_HOST=shopper_db
+      - DB_PORT=5432
     env_file:
       - .env
     depends_on:
@@ -31,6 +34,7 @@ services:
     container_name: shopper_web
     ports:
       - "80:80"
+      - "5173:5173"
     env_file:
       - .env
     depends_on:
