--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
+    "downshift": "^9.0.8",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.14.1",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
