--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
     "tailwindcss": "^3.4.15",
     "use-places-autocomplete": "^4.0.1"
   },
